--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ course_number:    'LATN 213'
 section_number:   '01'
 semester:         'Fall 2021'
 url:              https://libatique.info/LATN213-F21
-baseurl:          /
+baseurl:
 
 author:
   name:           'Daniel Libatique'
